workloads/ingresses/overlays/flink-demo-authn/cmf-ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cmf
  namespace: operator
spec:
  routes:
    - match: Host(`cmf.flink-demo-authn.confluentdemo.local`)
      kind: Rule
      services:
        - name: cmf-service
          port: 80
          scheme: http
