workloads/ingresses/overlays/flink-demo-authn/schema-registry-ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: schema-registry
  namespace: kafka
spec:
  routes:
    - kind: Rule
      match: Host(`schema-registry.flink-demo-authn.confluentdemo.local`)
      services:
        - name: schemaregistry
          port: 8081
          scheme: http
